fix: Image container overflow in Safari
- Add 100% width to image container

--- a/styles.css
+++ b/styles.css
@@ -44,6 +44,7 @@
 }
 
 .pokes__img-container {
+  width: 100%;
   background-color: #f2f2f2;
   border-radius: 4px;
   display: flex;
